<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/album_add"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/album_add_photo"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/album_play"
        android:icon="@drawable/ic_play_circle_filled_black_24dp"
        android:title="@string/album_slide_play"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/album_confirm"
        android:icon="@drawable/ic_check_black_24dp"
        android:title="@string/finish"
        android:visible="true"
        app:showAsAction="always" />
</menu>