<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="250dp">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/normal_marign"
        android:contentDescription="@string/album"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_collections_black_24dp" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="0dp"
        android:layout_height="@dimen/top_bar_width"
        android:gravity="center"
        android:text="@string/album_name"
        android:textSize="@dimen/normal_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivMask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_mask"
        app:layout_constraintBottom_toBottomOf="@+id/iv"
        app:layout_constraintEnd_toEndOf="@+id/iv"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/iv"
        app:layout_constraintTop_toTopOf="@+id/iv"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_bookmark_black_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>