<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/drag_height"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <ImageView
        android:id="@+id/ivIndicator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drag_height"
        android:contentDescription="@string/drag_handle"
        app:srcCompat="@drawable/ic_drag_handle_black_24dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">

        <ImageView
            android:id="@+id/ivHeader"
            android:layout_width="@dimen/user_header_size"
            android:layout_height="@dimen/user_header_size"
            android:contentDescription="@string/user_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_perm_identity_black_24dp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:autoText="false"
            android:ellipsize="marquee"
            android:focusable="auto"
            android:focusableInTouchMode="true"
            android:focusedByDefault="true"
            android:maxLength="@integer/tv_max_length"
            android:maxLines="@integer/tv_max_line"
            android:text="@string/click_login"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvFriend"
            app:layout_constraintStart_toEndOf="@+id/ivHeader" />

        <TextView
            android:id="@+id/tvFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_friend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.629" />

        <ImageView
            android:id="@+id/iv"
            android:layout_width="@dimen/drag_down"
            android:layout_height="@dimen/drag_down"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_navigate_next_black_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>