<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.Activity.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innner_consLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scrollbarStyle="insideInset"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/album" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time" />

            </com.google.android.material.tabs.TabLayout>

            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="@dimen/top_bar_width"
                android:layout_height="0dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/search"
                app:layout_constraintBottom_toBottomOf="@+id/btn_more"
                app:layout_constraintEnd_toStartOf="@+id/btn_more"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/btn_more"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_search_black_24dp" />

            <ImageButton
                android:id="@+id/btn_more"
                android:layout_width="@dimen/top_bar_width"
                android:layout_height="0dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_more_vert_black_24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/innner_consLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>