<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.codinlog.album.model.kotlin.DiaryPublicViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_marign"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/diary_title"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/etDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_marign"
                android:ems="10"
                android:gravity="clip_vertical"
                android:hint="@string/diary_desc"
                android:inputType="textMultiLine|text"
                android:maxLines="@integer/min_lines"
                android:minLines="@integer/min_lines"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@+id/rv"
                app:layout_constraintEnd_toEndOf="@+id/etTitle"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/etTitle"
                app:layout_constraintTop_toBottomOf="@+id/etTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:background="@drawable/border_style"
                android:padding="@dimen/normal_marign"
                app:layout_constraintBottom_toTopOf="@+id/btnPublish"
                app:layout_constraintEnd_toEndOf="@+id/etDesc"
                app:layout_constraintHorizontal_bias="0.736"
                app:layout_constraintStart_toStartOf="@+id/etDesc"
                app:layout_constraintTop_toBottomOf="@+id/etDesc" />

            <Button
                android:id="@+id/btnPublish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_style"
                android:text="@string/publish"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/rv"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/rv"
                app:layout_constraintTop_toBottomOf="@+id/rv" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="CheckBox"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnPublish"
                app:layout_constraintVertical_bias="0.0" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CheckBox"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/btnPublish" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_end="206dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fitsSystemWindows="true"
                app:backgroundTint="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="@+id/rv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rv"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ic_library_add_black_24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <include android:id="@+id/bottomSheet"
            layout="@layout/diary_bottom_sheet"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>